Mineria 1.3 for 1.20.1